--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   		<script src="./rough.js"></script>
   <script src="./sketch.js"></script>
   <script src="./carve2.js"></script>
+  <script src="./drawGate.js"></script>
   </head>
   <body>
 
