--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>He Hua</title>
+    <title>Wumen</title>
     <script id="fxhash-snippet">
       //---- do not edit the following code (you can indent as you wish)
       let alphabet = "123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ"
@@ -41,6 +41,7 @@
   <script src="./sketch.js"></script>
   <script src="./carve2.js"></script>
   <script src="./drawGate.js"></script>
+  <script src="./guarotation.js"></script>
   </head>
   <body>
 
